# inkscape

./: configure.ac
CMakeScripts/: Install.cmake
fontForge/: chageFontName.pe  cidConvertor.py  fontAdapter.py
infra/: build.sh
share/symbols/: symbols.h
share/templates/: templates.h
src/: CMakeLists.txt  Makefile_insert  main.cpp  shared_opt.cpp  shared_opt.h  sp-text.cpp  style.cpp  vanishing-point.cpp  vanishing-point.h
src/extension/: CMakeLists.txt
src/extension/internal/: Makefile_insert
src/extension/internal/pdfinput/: BookMarks.cpp  BookMarks.h  CMakeLists.txt  TabLine.cpp  TabLine.h  TabRect.cpp  TabRect.h  TableDefenition.cpp  TableDefenition.h  TableRecognizeCommon.cpp  TableRecognizeCommon.h  TableRectangle.cpp  TableRectangle.h  TableRegion.cpp  TableRegion.h  TextTableDetector.cpp  TextTableDetector.h  pdf-input.cpp  pdf-input.h  pdf-parser.cpp  pdf-parser.h  png-merge.cpp  png-merge.h  svg-builder.cpp  svg-builder.h  table-detector.cpp  table-detector.h
src/libnrtype/: FontFactory.cpp
src/pdf-extract/: CMakeLists.txt  PagesCatalog.cpp  PagesCatalog.h  PdfAnchor.cpp  PdfAnchor.h  pdf-extractor.cpp  tools.cpp  tools.h
src/ui/dialog/: document-properties.cpp
src/ui/tools/: flood-tool.cpp
src/ui/widget/: color-icc-selector.cpp
src/xml/: composite-node-observer.cpp  composite-node-observer.h
